Revision history for {{$dist->name}}

{{$NEXT}}

0.753     2019-01-04 21:38:06-08:00 America/Los_Angeles
  - Skip tests of unreadable files for MSWin32.
  - A safer CSV example in Example 1 & 2. Added tests based on that.
  - Grammatical/typo fixes in POD.

0.752     2019-01-02 20:25:16-08:00 America/Los_Angeles
  - One test fails for superuser. Fixing that.
  - Known issue in MSWin32 seems related to the same thing. Don't know if it gets fixed.
  - Made POD less verbose.

0.751     2019-01-01 20:30:37-08:00 America/Los_Angeles
  - Documentation looks better. Made links where it makes sense. Re-arranged the information better.

0.750     2019-01-01 19:37:50-08:00 America/Los_Angeles
  - Correct problems in test for Win32 platform compatibility.
  - Improve documentation to give examples of what all the functions do.
  - Changed the spec for filehandle() and read()
  - Added tests to cover the new spec.

0.700     2019-01-01 13:20:43-08:00 America/Los_Angeles
  - Some operating systems can read from STDOUT and some cannot. Same goes for output file handles.
  - Improved documentation.
  - Improved code coverage using Devel::Cover for the first time. We now have 99.5% coverage.
  - Added a new method called abort_reading().

0.502     2018-12-29 08:18:06-08:00 America/Los_Angeles
  - STDOUT and other output files don't uniformly respond to the -r test on all operating systems. This will need more work.

0.501     2018-12-23 20:51:09-08:00 America/Los_Angeles
  - This will be a known issue for V0.500 and V0.501, until fixed:
  - The test for checking that filehandle is read-only is actually not working. Fixing the tests for now to mark the test as TODO.

0.500     2018-12-23 20:14:10-08:00 America/Los_Angeles
  - Renamed this class as Text::Parser after RT#127067 by James Keenan
  - Added the ability to parse text from filehandles, thus the name Text::Parser and not Text::File::Parser
  - Added new method filehandle just to provide interface similar to filename.