@@ -3,17 +3,15 @@ use warnings;
 
 package SpiceParser;
 use parent 'Text::Parser';
+
 use Role::Tiny::With;
+with 'Text::Parser::Multiline::Typical';
 with 'Text::Parser::Multiline';
 
 use constant {
     SPICE_LINE_CONTD => qr/^[+]\s*/,
     SPICE_END_FILE   => qr/^\.end/i,
 };
-
-sub multiline_type {
-    return 'join_last';
-}
 
 sub is_line_continued {
     my ( $self, $line ) = @_;
@@ -46,6 +44,7 @@ use Test::Exception;
 
 my $sp = new SpiceParser;
 isa_ok( $sp, 'SpiceParser' );
+can_ok( $sp, 'multiline_type', 'is_line_continued', 'join_last_line' );
 isa_ok( $sp, 'Text::Parser' );
 
 lives_ok { $sp->read('t/example-2.sp'); } 'Works fine';
