@@ -1,0 +1,2 @@
+M1 Z A VSS VSS nMOS l=0.13u w=0.5u
+M2 Z A VDD VDD pMOS l=0.13u w=1.0u
